testsuite/tests/grammar/invalid_lexers/pattern_9.lkt
import common

lexer foo_lexer {
    val pat = 1
}
